# docs/swagger.json
@@ -13,7 +13,7 @@
     "paths": {
         "/auth/{guid}/login": {
             "post": {
-                "description": "Issues JWT token pair and sets them as cookies",
+                "description": "Issues a pair of authentication tokens and sets them as cookies",
                 "tags": [
                     "auth"
                 ],
@@ -21,15 +21,19 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User GUID",
+                        "example": "123e4567-e89b-12d3-a456-426614174000",
+                        "description": "A valid user GUID",
                         "name": "guid",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Invalid GUID"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -39,7 +43,7 @@
         },
         "/auth/{guid}/logout": {
             "post": {
-                "description": "Deauthorizes user",
+                "description": "Deauthorizes client. If they are not authenticated nothing happens.",
                 "tags": [
                     "auth"
                 ],
@@ -47,7 +51,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User GUID",
+                        "example": "123e4567-e89b-12d3-a456-426614174000",
+                        "description": "A valid user GUID",
                         "name": "guid",
                         "in": "path",
                         "required": true
@@ -56,16 +61,13 @@
                 "responses": {
                     "200": {
                         "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
                     }
                 }
             }
         },
         "/auth/{guid}/refresh": {
             "post": {
-                "description": "Refreshes access and refresh tokens if the refresh token is valid. Deauthorizes user if the user agent does not match.",
+                "description": "Refreshes access and refresh tokens if the refresh token is valid.\nDeauthorizes user if the user agent does not match to the one that issued the refresh token.",
                 "tags": [
                     "auth"
                 ],
@@ -73,7 +75,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User GUID",
+                        "example": "123e4567-e89b-12d3-a456-426614174000",
+                        "description": "A valid user GUID",
                         "name": "guid",
                         "in": "path",
                         "required": true
@@ -94,7 +97,7 @@
         },
         "/security/refresh-new-ip": {
             "post": {
-                "description": "Demo endpoint for IP change notifications",
+                "description": "Demo endpoint for a \"refresh from new IP\" action notifications",
                 "consumes": [
                     "application/json"
                 ],
@@ -109,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/routes.securityDummyWebhook.payload"
                         }
                     }
                 ],
@@ -132,15 +135,12 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get current user",
+                "summary": "Get current user's GUID",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/routes.whoami.resp"
                         }
                     },
                     "401": {
@@ -149,6 +149,38 @@
                     "500": {
                         "description": "Internal Server Error"
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "routes.securityDummyWebhook.payload": {
+            "type": "object",
+            "properties": {
+                "new_ip": {
+                    "type": "string",
+                    "example": "10.0.0.1:80085"
+                },
+                "old_ip": {
+                    "type": "string",
+                    "example": "127.0.0.1:80085"
+                },
+                "user_agent": {
+                    "type": "string",
+                    "example": "useragent/10.1.1"
+                },
+                "user_guid": {
+                    "type": "string",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
+                }
+            }
+        },
+        "routes.whoami.resp": {
+            "type": "object",
+            "properties": {
+                "GUID": {
+                    "type": "string",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
                 }
             }
         }
